--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  
   <div class="container mt-5 pt-5">
     <div class="mx-auto" style="max-width: 400px;">
-      <input type="number" id="pokemonId" placeholder="Digite o número do Pokémon" min="1" class="form-control mb-2">
+      <input type="text" id="pokemonId" placeholder="Digite o número ou escreva o Pokémon" min="1" class="form-control mb-2">
       <button onclick="getPokemon()" class="btn btn-success w-100">Buscar</button>
     </div>
   </div>
